src/scss/_app.scss
.app {
	max-width: 830px;
	padding: 0;
	margin: 0 auto;
	display: grid;
	grid-template-columns: 1fr 500px;
	grid-template-rows: auto auto;
	grid-gap: 0 50px;

	.form-upper,
	.form-lower {
		grid-column: 1;
		min-width: 270px;
	}

	.form-upper {
		padding-top: 80px;
	}

	.form-lower {
		padding: 20px 0 60px;
	}

	.flag-container {
		margin-top: 20px;
		max-width: 100%;
		height: auto;
		grid-column: 2;
		grid-row: 1 / span 2;
		text-align: center;
	}

	.credits {
		margin-bottom: 60px;
		grid-column: 1 / span 2;
	}

	@media ( max-width: 850px ) {
		max-width: 100%;
		padding: 0 20px;
		grid-template-columns: 1fr 400px;
	}

	@media ( max-width: 760px ) {
		grid-template-columns: 1fr 2fr;

		.form {
			min-width: 200px;
		}
	}

	@media ( max-width: 650px ) {
		grid-template-columns: 1fr 1fr;

		.form-upper {
			grid-row: 1;
			min-width: 150px;
		}
		.flag-container {
			grid-row: 1;
			align-self: center;
		}
		.form-lower {
			grid-column: 1/span 2;
		}
	}

	@media ( max-width: 450px ) {
		grid-template-columns: 1fr;

		.form-upper {
			grid-row: 1;
		}
		.flag-container {
			grid-column: 1;
			grid-row: 2;
		}
		.form-lower {
			grid-column: 1;
			grid-row: 3;
		}
	}
}

.form-field {
	display: block;
	margin: 0 0 1em;

	.form-label {
		display: block;
		margin: 0 0 0.5em;
	}
}

button,
.button {
	display: inline-block;
	-webkit-appearance: none;
	appearance: none;
	padding: 7px;
	font-size: 14px;
	line-height: 1;
	text-transform: uppercase;
	text-decoration: none;
	background: #F4F4F5;
	border: 1px solid #ccc;
	border-radius: 0;
	color: currentColor;

	span {
		display: inline-block;
		padding-right: 7px;
		vertical-align: middle;
	}

	.gridicon {
		top: 5px;
	}

	.gridicons-plus-small {
		margin-left: -4px;
	}

	.gridicons-cross-small {
		color: #C25E4A;
	}
}

input,
select {
	border: 1px solid #ccc;
}

select {
	-webkit-appearance: none;
	appearance: none;
	padding: 7px 32px 7px 16px;
	background: #F4F4F5 url($arrow) no-repeat 95% center;
	border-radius: 0;
	width: 100%;
}

